Add permission to publish Docker image

--- a/.github/workflows/publish-docker-image.yaml
+++ b/.github/workflows/publish-docker-image.yaml
@@ -4,6 +4,11 @@ on: [push]
 jobs:
   Build:
     runs-on: ubuntu-latest
+
+    permissions:
+      packages: write
+      contents: read
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
